--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 #root {
   height: 100vh;
   width: 100%;
+  
  
 }
 
@@ -13,7 +14,19 @@
   }
 }
 
-
+::-webkit-scrollbar{
+  width: '5px';
+  max-height: '10px';
+}
+::-webkit-scrollbar-track {
+  margin-top: '150px';
+  margin-bottom: '150px';
+  width: '5px';
+}
+::-webkit-scrollbar-thumb {
+  background: "white";
+  border-radius: '24px';
+}
 
 .card {
   padding: 2em;
