--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  scroll-behavior: smooth;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
- 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,7 +12,19 @@
   -webkit-text-size-adjust: 100%;
 }
 
-
+::-webkit-scrollbar{
+  width: '5px';
+  max-height: '10px';
+}
+::-webkit-scrollbar-track {
+  margin-top: '150px';
+  margin-bottom: '150px';
+  width: '5px';
+}
+::-webkit-scrollbar-thumb {
+  background: "white";
+  border-radius: '24px';
+}
 
 h1 {
   font-size: 3.2em;
