--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
 ::-webkit-scrollbar{
   width: '5px';
   max-height: '10px';
